<resources>
    <string name="app_name">MidtermExam</string>
    <string name="loginBtn">Login</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="firstBtn">Next</string>
    <string name="logintitle">LoginActivity</string>
    <string name="next">Next</string>
    <string name="main">main</string>
    <string name="maintitle">MainActivity</string>
    <string name="pass">Password</string>
    <string name="name">Name</string>
    <string name="back">Back</string>
    <string name="camera">Camera</string>
    <string name="photo">Photo</string>
    <string name="date">Calendar</string>
    <string name="youtube">Youtube</string>
    <string name="map">Maps</string>
    <string name="gg">Google</string>
    <string name="titleIntent">IntentActivity</string>
    <string name="touch">TouchActivity</string>
    <string name="last">Last</string>
</resources>